--- a/silk/src/main/res/values/strings.xml
+++ b/silk/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">silk</string>
-
+    <string name="server_client_id">Tw5fK1h0Dy1Df-Me2zoKsPTn</string>
 </resources>
